--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.3.2",
+    "chart.js": "^4.2.0",
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^6.9.0",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0"
