--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "@mui/material": "^5.11.7",
     "axios": "^1.3.2",
     "chart.js": "^4.2.0",
+    "dotenv": "^16.0.3",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^6.9.0",
+    "mongodb": "^5.0.0",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0"
